# robotica2026_ws

./: .gitignore  README.md
src/phi_p3dx_aria/: CMakeLists.txt  LICENSE  README.md  package.xml
src/phi_p3dx_aria/include/: PhiROS2Aria.hpp
src/phi_p3dx_aria/src/: PhiROS2Aria.cpp
src/phi_p3dx_navigation/: CMakeLists.txt  README.md  package.xml
src/phi_p3dx_navigation/include/: navigation_node.hpp
src/phi_p3dx_navigation/launch/: bringup_gazebo.launch.py  bringup_mobilesim.launch.py
src/phi_p3dx_navigation/phi_p3dx_navigation/: main.py
src/phi_p3dx_navigation/scripts/: control_example.py
src/phi_p3dx_navigation/src/: control_example.cpp  navigation_node.cpp  vfh_simplified.cpp  wall_follower_pid.cpp
src/phi_p3dx_planning/: CMakeLists.txt  README.md  package.xml
src/phi_p3dx_planning/config/: mapper_params_online_async.yaml  model_bridge.yaml
src/phi_p3dx_planning/include/: planning_node.hpp
src/phi_p3dx_planning/launch/: bringup_gazebo.launch.py  bringup_mobilesim.launch.py  bringup_robot.launch.py
src/phi_p3dx_planning/launch/includes/: bringup_navigation.launch.py  bringup_slam.launch.py
src/phi_p3dx_planning/phi_p3dx_planning/: __init__.py  main.py
src/phi_p3dx_planning/scripts/: planning_example.py
src/phi_p3dx_planning/src/: planning_example.cpp  planning_node.cpp  restricted_rrt.cpp  rrt.cpp
